row wrap fixed?

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
   background-color: #f1f1f1;
 }
 
-.book-shelf > div {
+.book-shelf > a {
 
 }
 
